# pre_compile_performance_test

./: CMakeLists.txt  benchmark.sh  main.cpp  main_freecad.cpp  precomp.hpp  precomp_freecad.hpp
.github/workflows/: ci_master.yml
